--- a/vanessa.cabal
+++ b/vanessa.cabal
@@ -22,13 +22,16 @@ maintainer:         max@maxniederman.com
 extra-source-files: CHANGELOG.md
 
 executable vanessa
-    main-is:          Main.hs
+  main-is:          Main.hs
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+  -- Modules included in this executable, other than Main.
+  -- other-modules:
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
-    hs-source-dirs:   app
-    default-language: Haskell2010
+  -- LANGUAGE extensions used by modules in this package.
+  -- other-extensions:
+  build-depends:
+    , base    ^>=4.14.3.0
+    , parsec  ^>=3.1.15.0
+
+  hs-source-dirs:   app
+  default-language: Haskell2010
