--- a/vanessa.cabal
+++ b/vanessa.cabal
@@ -21,17 +21,26 @@ maintainer:         max@maxniederman.com
 -- category:
 extra-source-files: CHANGELOG.md
 
-executable vanessa
-  main-is:          Main.hs
+library
+  exposed-modules:
+    Vanessa.Core
+    Vanessa.Value
+    Vanessa.Parse
+    Vanessa.Eval
 
-  -- Modules included in this executable, other than Main.
-  -- other-modules:
-
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
   build-depends:
     , base    ^>=4.14.3.0
     , parsec  ^>=3.1.15.0
+
+  hs-source-dirs:   src
+  default-language:  Haskell2010
+
+executable vanessa
+  main-is:          Main.hs
+
+  build-depends:
+    , base    ^>=4.14.3.0
+    , vanessa
 
   hs-source-dirs:   app
   default-language: Haskell2010
