--- a/vanessa.cabal
+++ b/vanessa.cabal
@@ -24,22 +24,23 @@ extra-source-files: CHANGELOG.md
 library
   exposed-modules:
     Vanessa.Core
-    Vanessa.Value
-    Vanessa.Parse
     Vanessa.Eval
+    Vanessa.Parse
+    Vanessa.Value
 
   build-depends:
-    , base    ^>=4.14.3.0
-    , parsec  ^>=3.1.15.0
+    , base          ^>=4.14.3.0
+    , parsec        ^>=3.1.15.0
+    , transformers  ^>=0.5.6.2
 
   hs-source-dirs:   src
-  default-language:  Haskell2010
+  default-language: Haskell2010
 
 executable vanessa
   main-is:          Main.hs
-
   build-depends:
-    , base    ^>=4.14.3.0
+    , base          ^>=4.14.3.0
+    , transformers  ^>=0.5.6.2
     , vanessa
 
   hs-source-dirs:   app
