--- a/vanessa.cabal
+++ b/vanessa.cabal
@@ -27,11 +27,13 @@ library
     Vanessa.Interpret
     Vanessa.Parse
     Vanessa.Value
+    Vanessa.Debug
 
   build-depends:
     , base          ^>=4.14.3.0
     , containers    ^>=0.6.5.1
     , parsec        ^>=3.1.15.0
+    , pretty        ^>=1.1.3.6
     , transformers  ^>=0.5.6.2
 
   hs-source-dirs:   src
@@ -41,6 +43,7 @@ executable vanessa
   main-is:          Main.hs
   build-depends:
     , base          ^>=4.14.3.0
+    , pretty        ^>=1.1.3.6
     , transformers  ^>=0.5.6.2
     , vanessa
 
